Fails to build on FreeBSD powerpc64
Categories
(Core :: JavaScript Engine: JIT, defect)
Tracking
()
People
(Reporter: jbeich, Assigned: jbeich)
References
Details
(Keywords: regression)
Attachments
(2 files, 1 obsolete file)
|
3.53 KB,
patch
|
bbouvier
:
review+
lizzard
:
approval-mozilla-beta+
|
Details | Diff | Splinter Review |
|
3.38 KB,
patch
|
RyanVM
:
approval-mozilla-esr60+
|
Details | Diff | Splinter Review |
As PC_sig is unconditionally defined on powerpc64 after bug 1462566 all OSes have to provide R32_sig. Looks backwards but fixing may introduce bustage, so let's just define the prerequisites.
In file included from objdir/js/src/Unified_cpp_js_src41.cpp:2:
js/src/wasm/WasmSignalHandlers.cpp: In function 'uint8_t** ContextToPC(ucontext_t*)':
js/src/wasm/WasmSignalHandlers.cpp:439:19: error: 'R32_sig' was not declared in this scope
#define PC_sig(p) R32_sig(p)
^~~~~~~
js/src/wasm/WasmSignalHandlers.cpp:450:39: note: in expansion of macro 'PC_sig'
return reinterpret_cast<uint8_t**>(&PC_sig(context));
^~~~~~
js/src/wasm/WasmSignalHandlers.cpp:439:19: note: suggested alternative: 'R12_sig'
#define PC_sig(p) R32_sig(p)
^~~~~~~
js/src/wasm/WasmSignalHandlers.cpp:450:39: note: in expansion of macro 'PC_sig'
return reinterpret_cast<uint8_t**>(&PC_sig(context));
^~~~~~
js/src/wasm/WasmSignalHandlers.cpp: In function 'uint8_t* ContextToFP(ucontext_t*)':
js/src/wasm/WasmSignalHandlers.cpp:441:19: error: 'R01_sig' was not declared in this scope
#define FP_sig(p) R01_sig(p)
^~~~~~~
js/src/wasm/WasmSignalHandlers.cpp:458:37: note: in expansion of macro 'FP_sig'
return reinterpret_cast<uint8_t*>(FP_sig(context));
^~~~~~
js/src/wasm/WasmSignalHandlers.cpp:441:19: note: suggested alternative: 'R11_sig'
#define FP_sig(p) R01_sig(p)
^~~~~~~
js/src/wasm/WasmSignalHandlers.cpp:458:37: note: in expansion of macro 'FP_sig'
return reinterpret_cast<uint8_t*>(FP_sig(context));
^~~~~~
js/src/wasm/WasmSignalHandlers.cpp: In function 'uint8_t* ContextToSP(ucontext_t*)':
js/src/wasm/WasmSignalHandlers.cpp:440:19: error: 'R01_sig' was not declared in this scope
#define SP_sig(p) R01_sig(p)
^~~~~~~
js/src/wasm/WasmSignalHandlers.cpp:466:37: note: in expansion of macro 'SP_sig'
return reinterpret_cast<uint8_t*>(SP_sig(context));
^~~~~~
js/src/wasm/WasmSignalHandlers.cpp:440:19: note: suggested alternative: 'R11_sig'
#define SP_sig(p) R01_sig(p)
^~~~~~~
js/src/wasm/WasmSignalHandlers.cpp:466:37: note: in expansion of macro 'SP_sig'
return reinterpret_cast<uint8_t*>(SP_sig(context));
^~~~~~
http://pylon.nyi.freebsd.org/data/head-powerpc64-default/p494357_s344714/logs/errors/firefox-esr-60.5.2_1,1.log
http://pylon.nyi.freebsd.org/data/head-powerpc64-default/p494357_s344714/logs/errors/thunderbird-60.5.2_1.log
I can't set r?, so let's go with sr?. Please, replace with r+ or r-.
(Phabricator isn't an option due to MFA requirement which is incompatible with GitHub login on Bugzilla.)
https://treeherder.mozilla.org/#/jobs?repo=try&revision=ac4cb42157702da199d04efad0d830b618954ed1
Oops, forgot to run clang-format. Have to be done manually due to bug 1521654.
Comment 3•6 years ago
|
||
(In reply to Jan Beich from comment #1)
(Phabricator isn't an option due to MFA requirement which is incompatible with GitHub login on Bugzilla.)
It's a bit unfortunate that one can't use Github login and Phabricator. That being said, you can go to your bugzilla account preferences, set a password (which means you won't be able to log in via Github anymore) and then use your account for Phabricator. It's not the best solution but it can be a workaround in the meanwhile.
Comment 4•6 years ago
|
||
Updated•6 years ago
|
Pushed by archaeopteryx@coole-files.de:
https://hg.mozilla.org/integration/mozilla-inbound/rev/1f10307fec28
Unbreak BSDs build on powerpc64 after bug 1462566. r=bbouvier
Updated•6 years ago
|
Comment 6•6 years ago
|
||
| bugherder | ||
Comment on attachment 9048725 [details] [diff] [review]
v1
Beta/Release Uplift Approval Request
- Feature/Bug causing the regression: Bug 1462566
- User impact if declined: Broken build on FreeBSD/NetBSD/OpenBSD on powerpc64.
- Is this code covered by automated tests?: Yes
- Has the fix been verified in Nightly?: Yes
- Needs manual test from QE?: No
- If yes, steps to reproduce:
- List of other uplifts needed: None
- Risk to taking this patch: Low
- Why is the change risky/not risky? (and alternatives if risky): NPOTB. Can only break build due to mismerge.
- String changes made/needed:
Comment 8•6 years ago
|
||
ESR Uplift Approval Request
- If this is not a sec:{high,crit} bug, please state case for ESR consideration: Regression from a previous ESR60 uplift. Noticed late due to missing (at the time) Rust package on FreeBSD powerpc64.
Help building Tor Browser and Thunderbird on more platforms.
- User impact if declined: Broken build on FreeBSD/NetBSD/OpenBSD on powerpc64.
- Fix Landed on Version: 67
- Risk to taking this patch: Low
- Why is the change risky/not risky? (and alternatives if risky): NPOTB. Can only break build due to mismerge or misrebase.
- String or UUID changes made by this patch:
| Assignee | ||
Comment 10•6 years ago
|
||
Comment 11•6 years ago
|
||
Comment 12•6 years ago
|
||
| bugherder uplift | ||
Comment 13•6 years ago
|
||
| bugherder uplift | ||
Description
•