Bug 1532851 - Unbreak BSDs build on powerpc64 after bug 1462566. r=bbouvier a=lizzard Define R32_sig, R01_sig based on: https://github.com/openbsd/src/blob/master/sys/arch/powerpc/include/signal.h https://github.com/netbsd/src/blob/trunk/sys/arch/powerpc/include/mcontext.h https://github.com/freebsd/freebsd/blob/master/sys/powerpc/include/ucontext.h

--HG--
extra : source : 1f10307fec284c52fbaf8d8423b47e762b9f0990
extra : histedit_source : 57f09ced52ea26952b0571bf93d602327dec8dd3